force-app/main/default/objects/OpportunityLineItem/fields/LMI_Offtake__c.field-meta.xml
<CustomField>
    <fullName>LMI_Offtake__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true when this opportunity product includes LMI offtake</inlineHelpText>
    <label>LMI Offtake</label>
    <type>Checkbox</type>
</CustomField>