force-app/main/default/objects/OpportunityLineItem/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Set via a Before Save flow. This field is used in rollup fields on opportunity.</description>
    <label>Product Family</label>
    <length>100</length>
    <type>Text</type>
</CustomField>