force-app/main/default/objects/OpportunityLineItem/fields/UCB__c.field-meta.xml
<CustomField>
    <fullName>UCB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true when this opportunity product includes UCB</inlineHelpText>
    <label>UCB</label>
    <type>Checkbox</type>
</CustomField>