force-app/main/default/objects/OpportunityLineItem/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.QuantityUnitOfMeasure)</formula>
    <label>Unit of Measure</label>
    <type>Text</type>
</CustomField>