force-app/main/default/objects/OpportunityLineItem/fields/UOM_Based_Price__c.field-meta.xml
<CustomField>
    <fullName>UOM_Based_Price__c</fullName>
    <inlineHelpText>Price based on Product&apos;s default unit of measure e.g. per W (acquisition service) or per MW (management services)</inlineHelpText>
    <label>UOM Based Price</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>